Add Google Search Console verification meta tag directly to index.html for static detection

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="PfR0BYoS5zgg2VIX-8RnFQAVmDfED57M0TG5e6g-Bd4" />
   </head>
 
   <body>
