Update Search Console verification code to new property

--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brotherhood Studio | Wedding Photography & Films</title>
-    <meta name="description" content="Brotherhood Studio - Crafting timeless love stories through cinematic wedding photography and films in Amgaon, Chhindwara and across Madhya Pradesh." />
-    <meta name="author" content="Brotherhood Studio" />
-    <meta name="keywords" content="wedding photography, wedding films, pre-wedding, Chhindwara, Amgaon, Madhya Pradesh, cinematic wedding" />
 
-    <meta property="og:title" content="Brotherhood Studio | Cinematic Wedding Photography & Films" />
-    <meta property="og:description" content="Crafting timeless love stories through cinematic wedding photography and films." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Brotherhood Studio | Wedding Photography & Films</title>
+  <meta name="description"
+    content="Brotherhood Studio - Crafting timeless love stories through cinematic wedding photography and films in Amgaon, Chhindwara and across Madhya Pradesh." />
+  <meta name="author" content="Brotherhood Studio" />
+  <meta name="keywords"
+    content="wedding photography, wedding films, pre-wedding, Chhindwara, Amgaon, Madhya Pradesh, cinematic wedding" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="PfR0BYoS5zgg2VIX-8RnFQAVmDfED57M0TG5e6g-Bd4" />
-  </head>
+  <meta property="og:title" content="Brotherhood Studio | Cinematic Wedding Photography & Films" />
+  <meta property="og:description"
+    content="Crafting timeless love stories through cinematic wedding photography and films." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Lovable" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="PF8O8YoSzZgzVlX-s8nFQAVmDF5DS7MOTtG5eGg-Bd4" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
