--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>Brotherhood Studio | Wedding Photography & Films</title>
-  <meta name="description"
-    content="Brotherhood Studio - Crafting timeless love stories through cinematic wedding photography and films in Amgaon, Chhindwara and across Madhya Pradesh." />
-  <meta name="author" content="Brotherhood Studio" />
-  <meta name="keywords"
-    content="wedding photography, wedding films, pre-wedding, Chhindwara, Amgaon, Madhya Pradesh, cinematic wedding" />
 
-  <meta property="og:title" content="Brotherhood Studio | Cinematic Wedding Photography & Films" />
-  <meta property="og:description"
-    content="Crafting timeless love stories through cinematic wedding photography and films." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id=GTM-KW8QVSFH'+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KW8QVSFH');
+</script>
+<!-- End Google Tag Manager -->
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Brotherhood Studio | Wedding Photography & Films</title>
 
-  <!-- Google Search Console Verification -->
-  <meta name="google-site-verification" content="PF8O8YoSzZgzVlX-s8nFQAVmDF5DS7MOTtG5eGg-Bd4" />
+<meta name="description"
+content="Brotherhood Studio - Crafting timeless love stories through cinematic wedding photography and films in Amgaon, Chhindwara and across Madhya Pradesh." />
+
+<meta name="author" content="Brotherhood Studio" />
+
+<meta name="keywords"
+content="wedding photography, wedding films, pre-wedding, Chhindwara, Amgaon, Madhya Pradesh, cinematic wedding" />
+
+<meta property="og:title" content="Brotherhood Studio | Cinematic Wedding Photography & Films" />
+<meta property="og:description"
+content="Crafting timeless love stories through cinematic wedding photography and films." />
+<meta property="og:type" content="website" />
+
+<meta name="google-site-verification"
+content="PF80YoSzZgzVlX-s8nFQAVmDF5DS7MOTtG5eGg-Bd4" />
+
+<script type="module" crossorigin src="/assets/index.js"></script>
+<link rel="stylesheet" crossorigin href="/assets/index.css">
+
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
 
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW8QVSFH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+<div id="root"></div>
+
+</body>
 </html>
