Refine logo usage: remove from UI, keep for favicon and metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brotherhood Studio | Wedding Photography & Films</title>
   <meta name="description"
     content="Brotherhood Studio - Crafting timeless love stories through cinematic wedding photography and films in Amgaon, Chhindwara and across Madhya Pradesh." />
@@ -15,11 +15,13 @@
   <meta property="og:description"
     content="Crafting timeless love stories through cinematic wedding photography and films." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/logo.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/logo.png" />
+
+  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="PF8O8YoSzZgzVlX-s8nFQAVmDF5DS7MOTtG5eGg-Bd4" />
