feat: update logo and luxury seo description final

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brotherhood Studio | Wedding Photography & Films</title>
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="description"
+    content="Brotherhood Studio | Luxury Wedding Photography & Cinematic Storytelling. Capturing raw emotions and timeless elegance with state-of-the-art 4K drone cinematography and artistic perspective. Premier studio serving Chhindwara & Worldwide." />
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="/favicon.ico" />
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
@@ -28,11 +32,55 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="/logo.png" />
 
-  <link rel="icon" type="image/png" href="/logo.png" />
-  <link rel="apple-touch-icon" href="/logo.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/logo.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
 
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="PF8O8YoSzZgzVlX-s8nFQAVmDF5DS7MOTtG5eGg-Bd4" />
+
+  <!-- Advanced SEO Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PhotographyStore",
+      "name": "Brotherhood Studio",
+      "image": "https://brotherhoodstudio.in/logo.png",
+      "@id": "https://brotherhoodstudio.in",
+      "url": "https://brotherhoodstudio.in",
+      "telephone": "+91 9301781585",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Amgaon",
+        "addressLocality": "Chhindwara",
+        "addressRegion": "MP",
+        "postalCode": "480001",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 22.0574,
+        "longitude": 78.9382
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "sameAs": [
+        "https://www.instagram.com/brotherhoodstudio_/",
+        "https://www.facebook.com/brotherhoodstudio"
+      ]
+    }
+  </script>
 </head>
 
 <body>
