seo: update description and enhance favicon tags

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brotherhood Studio | Wedding Photography & Films</title>
   <meta name="description"
-    content="Brotherhood Studio | Luxury Wedding Photography & Cinematic Storytelling. Capturing raw emotions and timeless elegance with state-of-the-art 4K drone cinematography and artistic perspective. Premier studio serving Chhindwara & Worldwide." />
+    content="Brotherhood Studio | Best Wedding Photographer in Chhindwara & Madhya Pradesh. Specializing in candid wedding photography, cinematic wedding films, pre-wedding shoots, and luxury wedding coverage across MP." />
   <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
@@ -23,9 +25,9 @@
   </script>
   <!-- End Google Tag Manager -->
 
-  <meta property="og:title" content="Brotherhood Studio | Cinematic Wedding Photography & Films" />
+  <meta property="og:title" content="Brotherhood Studio | Best Wedding Photographer in Chhindwara & MP" />
   <meta property="og:description"
-    content="Crafting timeless love stories through cinematic wedding photography and films." />
+    content="Specializing in candid wedding photography, cinematic wedding films, pre-wedding shoots, and luxury wedding coverage across MP." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/logo.png" />
 
